Second commit - adjustments to texts and file names

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 	<div class="px-4 pt-5 my-5 text-center border-bottom">
 		<h1 class="display-4 fw-bold text-body-emphasis">Morse</h1>
-		<p class="container-md col-sm-8">Type your text in the box down bellow. Text to morse code and morse to text
+		<p class="container-md col-sm-8">Type your text in the box down bellow. Text-to-morse code and morse-to-text
 		options are supported. Click on the button to hear your morse code play and find your encoded or decoded text in the
 		next page.</p><br>
 		<div class="col-lg-6 mx-auto">
